# aw-watcher.nvim

./: Cargo.toml  README.md
src/: handler.rs  lib.rs
